update: update toList method