@@ -88,7 +88,7 @@ public class Employee implements UserDetails, Principal {
         return this.roles
                 .stream()
                 .map(r -> new SimpleGrantedAuthority(r.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
